--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
 
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="layout.css" />
   <title>Sound Tracker APP</title>
