--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     crossorigin="anonymous"></script>
 
   <script src="app.js"></script>
+  <script src="scrollBtn.js"></script>
+
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="layout.css" />
   <title>Sound Tracker APP</title>
@@ -82,6 +84,10 @@
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Launch demo modal
     </button>
+
+  <div>
+    <button id="scrollToTop" title="Go to top of the page">Top</button> 
+  </div>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
