--- a/player.html
+++ b/player.html
@@ -6,48 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="player.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
+
     <link rel="stylesheet" href="player.css" />
     <title>Document</title>
 </head>
 
 <body>
     <div>
-        <div class="topnav">
-            <img src="https://image.flaticon.com/icons/svg/2111/2111624.svg" id="logo">
-            <span>Now Playing: <div id="small-text">Happy Now-Kygo</div></span>
-        </div>
+  
         <br>
         <div class="center-wrapper">
             <div class="center-content">
-                <div class="center-pic">
-                    <img src="https://i.scdn.co/image/ab67616d0000b27382c80d6ec5b001d9ae49564d" id="song-pic">
-                </div>
+            
                 <div class="controls-wrapper">
                     <div class="title">
                         <a href="#">Happy Now-Kygo</a>
-                        <a href="#"><i class='fas fa-heart' style="margin-right:10px;" id="heart"
-                                onclick="toggleLike()"></i></a>
+                        <a id="currentTime" href="#"></a>
                     </div>
                     <div class="controls">
-                        <i class='fas fa-random'></i>
+                        <img src="https://i.scdn.co/image/ab67616d0000b27382c80d6ec5b001d9ae49564d" id="song-pic">
                         <div class="controls-center">
-                            <i class='fas fa-fast-backward'></i>
-                            <i class='far fa-play-circle' onclick="playAudio()"></i>
-                            <i class='far fa-pause-circle' onclick="pauseAudio()"></i>
-                            <i class='fas fa-fast-forward'></i>
+                            <i class='fas fa-fast-backward' id="backward"></i>
+                            <i class='far fa-play-circle' id="play" ></i>
+                            <i class='far fa-pause-circle' id="pause" ></i>   
                         </div>
-                        <i class='fas fa-expand-arrows-alt'></i>
                         <audio id="myAudio">
                             <source
                                 src="https://api.freeplaymusic.com/media/downloadable/files/link_samples/media/volume/tracks/Etheral_Movements_Volume_1/m/a/martian_bayou_60.mp3"
                                 type="audio/mp4">
                         </audio>
 
-
-
                     </div>
-                </div>
-                <div class="footer"></div>
+                    <div class="progress" style="height: 5px;">
+                        <div id="progressBar" class="progress-bar bg-success" role="progressbar" style="width: 0%"  aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                
             </div>
         </div>
     </div>
