--- a/player.html
+++ b/player.html
@@ -8,7 +8,6 @@
     <script src="player.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
 
     <link rel="stylesheet" href="player.css" />
     <title>Document</title>
@@ -19,30 +18,8 @@
   
         <br>
         <div class="center-wrapper">
-            <div class="center-content">
-            
-                <div class="controls-wrapper">
-                    <div class="title">
-                        <a href="#">Happy Now-Kygo</a>
-                        <a id="currentTime" href="#"></a>
-                    </div>
-                    <div class="controls">
-                        <img src="https://i.scdn.co/image/ab67616d0000b27382c80d6ec5b001d9ae49564d" id="song-pic">
-                        <div class="controls-center">
-                            <i class='fas fa-fast-backward' id="backward"></i>
-                            <i class='far fa-play-circle' id="play" ></i>
-                            <i class='far fa-pause-circle' id="pause" ></i>   
-                        </div>
-                        <audio id="myAudio">
-                            <source
-                                src="https://api.freeplaymusic.com/media/downloadable/files/link_samples/media/volume/tracks/Etheral_Movements_Volume_1/m/a/martian_bayou_60.mp3"
-                                type="audio/mp4">
-                        </audio>
+            <div id="playerWrapper" class="center-content">
 
-                    </div>
-                    <div class="progress" style="height: 5px;">
-                        <div id="progressBar" class="progress-bar bg-success" role="progressbar" style="width: 0%"  aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
                 
             </div>
         </div>
