--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
+    
+    <script src="https://unpkg.com/@googlemaps/js-api-loader@1.0.0/dist/index.min.js"></script>
+
 
   <script src="app.js" type="module"></script>
   <script src="scrollBtn.js"></script>
@@ -43,6 +46,7 @@
     </div>
   </div>
 
+  <div id="mapa"></div>
   <div class="container mt-md-5">
     <div class="row">
       <div id="whats-happening" class="col-md-4">What's happening?</div>
@@ -55,6 +59,7 @@
 
   <div id="cards-container">
   </div>
+ 
 
 </body>
 
