--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 
   <script src="app.js" type="module"></script>
-  <script src="scrollBtn.js"></script>
 
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="layout.css" />
-  <link rel="stylesheet" href="player.css" />
+
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/layout.css" />
+  <link rel="stylesheet" href="css/player.css" />
   <title>Sound Tracker APP</title>
 </head>
 
