update arrow to top

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </div>
 
     <div id="cards-container"></div>
-    <button id="scrollToTop" title="Go to top of the page">Top</button>
+    <button id="scrollToTop" title="Go to top of the page">
+      <div class="arrow up"></div>
+    </button>
   </body>
 </html>
