css fixes on mobile modal

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             id="calendar"
             class="form-control bg-transparent"
             type="date"
+            placeholder="Choose a date"
           />
         </div>
       </div>
