--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <img src="assets/logo.svg" alt="logo" />
         </a>
       </div>
+      <button id="bookmark"><i class="fas fa-bookmark fa-2x"></i><span id="bookmarkCount">3</span></button>
     </navbar>
 
     <div id="pickers" class="p-5">
